# llm-playground

./: .gitignore  README.md  fine_tuning_dataset_brasil_with_output.jsonl  fine_tuning_hermes_assistente_br.ipynb  magie_banking_agent_tools.json  pyproject.toml  requirements.txt
src/app/: bank_actions.py  intent_engine.py  llm_client.py  main.py  state_store.py
src/app/application/: bank_application_service.py  conversation_manager.py  intent_handler.py
src/app/domain/: default_entity_manager.py  intent_engine.py  intent_service.py  state_repository.py  user_session.py
src/app/infra/: llm_client.py  logger_adapter.py
src/app/presentation/: console.py
src/app/ui/: console.py  ui_console.py
src/tests/: test_conversation_manager.py  test_dialogs.py  test_intent_engine.py  test_multi_turn_conversations.py  test_state_store.py
src/tests/e2e_tests/: test_e2e.py
src/tests/resources/: dialogs.json  multi_turn_scenarios.json
src/tests/unit_tests/: test_bank_application_service.py  test_conversation_manager.py  test_default_entity_manager.py  test_dialogs.py  test_intent_engine.py  test_intent_handler.py  test_intent_service.py  test_multi_turn_conversations.py
tests/: test_dialogs.py  test_intent_engine.py
