[project]
name = "llm-intent-assistant"
version = "0.1.0"
description = "Intent detection assistant using LLMs"
authors = [
    { name="Your Name", email="you@example.com" }
]
dependencies = [
    "transformers",
    "datasets",
    "peft",
    "accelerate",
    "bitsandbytes",
    "scikit-learn"
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
